feat: implement edit installment endpoint
