# internal/resources/constants/domain.go
@@ -1,4 +1,4 @@
-package transactions
+package constants
 
 type TransactionType string
 
@@ -6,4 +6,12 @@ const (
 	SimpleExpense TransactionType = "simple_expense"
 	Income        TransactionType = "income"
 	Installment   TransactionType = "installment"
+)
+
+type InstanceType string
+
+const (
+	ThisOne          = "one"
+	ThisAndFollowing = "following"
+	All              = "all"
 )
